Bug 90510 - FILEOPEN:Calc correctly reads but does not apply pie label settings
Summary: FILEOPEN:Calc correctly reads but does not apply pie label settings
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Chart (show other bugs)
Version:
(earliest affected)
4.0.0.3 release
Hardware: Other All
: medium normal
Assignee: Dennis Francis
URL:
Whiteboard: interoperability target:6.0.0 target:...
Keywords: bibisected, bisected, filter:ooxml, regression
Depends on:
Blocks:
 
Reported: 2015-04-08 01:06 UTC by Luke
Modified: 2017-07-31 19:31 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Sample Pie Chart with Labels Outside (59.50 KB, application/x-ole-storage)
2015-04-08 01:06 UTC, Luke
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Luke 2015-04-08 01:06:37 UTC
Created attachment 114685 [details]
Sample Pie Chart with Labels Outside

The .XLS importer correctly read but then ignores the Data Label settings. 

Steps to reproduce:
1. Open PiechartOutside.xls in OpenOffice or Excel
2. Open PiechartOutside.xls in LibreOffice Calc
3. Compare

NOTE: In LO calc, Dbl click on chart -> right click on the label-> Format Data Labels -> Data labels
The setting are correct, Placement=Outside. Clicking OK will cause Calc to correctly redraw the chart. This is likely a regression, as OpenOffice correctly imports the chart.
Comment 1 raal 2015-04-08 20:54:54 UTC
I can confirm with Version: 4.5.0.0.alpha0+
Build ID: b024e36ddb3b53163d7a01f6f7b5aadb7a858cd9
TinderBox: Linux-rpm_deb-x86_64@46-TDF, Branch:master, Time: 2015-03-31_09:12:20

works OK in Version 4.0.0.0.alpha1+ (Build ID: ce90f99a2d66c2b998ad3f9f028e2ea623a757f) -> regression
Comment 2 Matthew Francis 2015-04-09 03:04:27 UTC
The labels move inside the chart as of commit (1), but at that point opening "Format Data Labels" makes no difference. As of the following commit (2), opening "Format Data Labels" causes the outside placement to be applied


(1)
commit e6591c6e940cc694aa68c97e287e59572f690d74
Author: Kohei Yoshida <kohei.yoshida@gmail.com>
Date:   Fri Dec 7 21:14:50 2012 -0500

    bnc#791952: Use "center" label placement for "Best fit" in pie charts.
    
    It works better this way for Excel interoperability.  In Excel, Best fit
    is slightly different than the center placement, but the two are pretty
    close in pie charts.
    
    Change-Id: I7f04a1babb04fd488d8cf90df247c294fa9d7b67

(2)
commit 6858182d246f21c5b06af09d8ff0e6fd04ef26c3
Author: Kohei Yoshida <kohei.yoshida@gmail.com>
Date:   Sat Dec 8 00:00:49 2012 -0500

    bnc#791952: Setting properties for all data labels.
    
    You can set different properties to individual data labels.  But setting
    new properties to all data labels should overwrite the individual settings.
    
    Change-Id: I934bad89326115aa83feb86275cf380d701a5686
Comment 3 Luke 2015-04-09 05:42:25 UTC
Markus, 
How should we handle this regression? It's causing the importer to ignoring correct settings.
Comment 4 Markus Mohrhard 2015-04-13 19:53:37 UTC
(In reply to Luke from comment #3)
> Markus, 
> How should we handle this regression? It's causing the importer to ignoring
> correct settings.

Like any other regression. Wait until someone finds time to fix it. The label placement code is nothing easy and I would not expect a fix appearing soon.
Comment 5 Robinson Tryon (qubit) 2015-12-10 01:18:38 UTC Comment hidden (obsolete)
Comment 6 Aron Budea 2016-09-11 03:17:06 UTC
Still occurs in 5.2.1.2.

CCing Kohei Yoshida for notification, since he's the author.
Comment 7 Xisco Faulí 2016-10-03 09:24:08 UTC
Adding Cc: to Kohei Yoshida
Comment 8 Commit Notification 2017-07-27 15:06:28 UTC
Dennis Francis committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=2a4d015ff896dc9e8d2219982da54c51a42482b8

tdf#90510 : Override default point label placement setting...

It will be available in 6.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2017-07-27 17:11:14 UTC
Dennis Francis committed a patch related to this issue.
It has been pushed to "libreoffice-5-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=cb46bc6ba066c1c98d4e357f8469c5eecc171241&h=libreoffice-5-4

tdf#90510 : Override default point label placement setting...

It will be available in 5.4.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Luke 2017-07-28 18:57:17 UTC
Thank you Dennis. Verified fixed in Version: 6.0.0.0.alpha0+ (x64)
Build ID: 3956e4cb58033cae360beddf97136596ff3bb740