tdf#90510 : Override default point label placement setting...

with global label placement setting if available while
importing xls chart.

Added unit test in chart2import.cxx that asserts one of
the point label setting in the bugzilla xls document.

Change-Id: Id331f56c05873554b22920e02805909c50fb8619